force-app/main/default/objects/Milestones__c/Milestones__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <label>Milestones Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>