force-app/main/default/objects/Milestones__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active ?</label>
    <type>Checkbox</type>
</CustomField>