force-app/main/default/objects/Milestones__c/fields/PercentCompleted__c.field-meta.xml
<CustomField>
    <fullName>PercentCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>% Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>