force-app/main/default/objects/Milestones__c/fields/TagCategory__c.field-meta.xml
<CustomField>
    <fullName>TagCategory__c</fullName>
    <label>Tag / Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>