force-app/main/default/objects/Milestones__c/fields/testStatus__c.field-meta.xml
<CustomField>
    <fullName>testStatus__c</fullName>
    <label>testStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>NotStarted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>